# wimplib

./: CMakeLists.txt  README.md
.github/: pr-badge.yml
.github/workflows/: frameworkPR.yml  frameworkValidation.yml  validation.yml
examples/: WIMP.rml  WIMP_compound_1.rml  WIMP_compound_2.rml
inc/: TRestWimpNucleus.h  TRestWimpSensitivity.h  TRestWimpUtils.h
macros/: REST_WIMP_FormFactor.C  REST_WIMP_QuenchingFactor.C  REST_WIMP_RecoilRate.C  REST_WIMP_Sensitivity.C
src/: TRestWimpNucleus.cxx  TRestWimpSensitivity.cxx  TRestWimpUtils.cxx
test/files/: wimp.rml
test/src/: TRestWimpSensitivity.cxx
